5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1575_1326.log
== TEST (2019-03-12 11:45:44) 
-- CODE:
40 + 35 = 75 
-- ERROR:
File "XXXX", line 1
    40 + 35 = 75 
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:07) 
-- CODE:
Print("40 + 35")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print("40 + 35")
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:48:58) 
-- CODE:
Print(40 + 35)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(40 + 35)
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:09) 
-- CODE:
Print(40+35)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(40+35)
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:22) 
-- CODE:
Print(40+35=)
-- ERROR:
File "XXXX", line 1
    Print(40+35=)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:49:51) 
-- CODE:
Print(40 + 35 =)
-- ERROR:
File "XXXX", line 1
    Print(40 + 35 =)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:17) 
-- CODE:
Print(40 + 35 = 75)
-- ERROR:
File "XXXX", line 1
    Print(40 + 35 = 75)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:50:48) 
-- CODE:
Print(75)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(75)
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:50:53) 
-- CODE:
Print(75)
-- EXECUTION TIME:
0.126223
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1326/main.py", line 1, in <module>
    Print(75)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:10) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:51:17) 
-- CODE:
print(75)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:51:20) 
-- CODE:
print(75)
-- EXECUTION TIME:
0.123954
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
